fixing logo scaling on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,6 +72,8 @@ textarea {
 
 #ea-main-logo {
   margin-bottom: 2em;
+  object-fit: contain;
+  width: 100%;
   height: 220px;
 }
 
